tests/ui/macros/macro-missing-delimiters.stderr
error: invalid macro matcher; matchers must be contained in balanced delimiters
  --> $DIR/macro-missing-delimiters.rs:2:5
   |
LL |     baz => ()
   |     ^^^

error: aborting due to 1 previous error

