tests/ui/macros/macro-missing-delimiters.rs
macro_rules! baz(
    baz => () //~ ERROR invalid macro matcher;
);

fn main() {
    baz!(baz);
}
